--- a/Ejemplo3/INDEX.html
+++ b/Ejemplo3/INDEX.html
@@ -2,15 +2,33 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ejmemplo 3</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Ejemplo 3</title>
+    <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
     <div class="contenedor-principal">
-        <img src="img/user.png" alt="imagen usuario">
-
+        <div class="contenedor-imagen">
+            <img class= "image-perfil" src="img/user.png" alt="imagen usuario">
+        </div>
+        <h1>Yoiser</h1>
+        <h2>Estudiante</h2>
+        <div class="contenedor-botones">
+            <a href="https://www.google.com" class="link">
+                <img src="https://static.vecteezy.com/system/resources/previews/010/353/285/non_2x/colourful-google-logo-on-white-background-free-vector.jpg" alt="" class="img-google">
+            </a>
+            <a href="https://www.google.com" class="link">
+                <img src="https://img.freepik.com/premium-vector/blue-social-media-logo_197792-1759.jpg" alt="" class="img-facebook">
+            </a>
+            <a href="https://www.instagram.com/" class="link">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e7/Instagram_logo_2016.svg/768px-Instagram_logo_2016.svg.png" alt="" class="img-instagram">
+            </a>
+        </div>
     </div>
-    
+    <audio controls>
+        <source src="prueba.mp3" type="audio/mpeg" >
+    </audio>
+
 </body>
 </html>
